Project Spec Modified
- Updated Base Environment to 'nvidia/ai-workbench/python-cuda122:1.0.6'

--- a/.project/spec.yaml
+++ b/.project/spec.yaml
@@ -23,8 +23,8 @@ layout:
 environment:
   base:
     registry: nvcr.io
-    image: nvidia/ai-workbench/python-cuda122:1.0.3
-    build_timestamp: "20231214221614"
+    image: nvidia/ai-workbench/python-cuda122:1.0.6
+    build_timestamp: "20250205043304"
     name: Python with CUDA 12.2
     supported_architectures: []
     cuda_version: "12.2"
@@ -55,8 +55,8 @@ environment:
           -v 'Currently'
     programming_languages:
     - python3
-    icon_url: ""
-    image_version: 1.0.3
+    icon_url: https://workbench.download.nvidia.com/static/img/ai-workbench-icon-rectangle.jpg
+    image_version: 1.0.6
     os: linux
     os_distro: ubuntu
     os_distro_release: "22.04"
@@ -78,9 +78,9 @@ environment:
       - python3-pip
       - vim
     - name: pip
-      binary_path: /usr/local/bin/pip
+      binary_path: /usr/bin/pip
       installed_packages:
-      - jupyterlab==4.0.7
+      - jupyterlab==4.2.5
     package_manager_environment:
       name: ""
       target: ""
